--- a/.github/workflows/PRLimit-main.yml
+++ b/.github/workflows/PRLimit-main.yml
@@ -3,12 +3,12 @@ name: Limit PRs
 on:
   pull_request:
     branches:
-      - main
+      - master
 
 jobs:
   limit_master_pr:
     runs-on: ubuntu-latest
-    name: Limits PR to main
+    name: Limits PR to master
     steps:
       - name: Limit action step
         id: limit_action
