--- a/.github/workflows/sonarqubeBranch.yml
+++ b/.github/workflows/sonarqubeBranch.yml
@@ -6,7 +6,7 @@ on:
   push:
   # and the target with some regex to match our specific  branch names
     branches:
-      - main
+      - master
       - dev
       - staging
 # We can now build our job
