--- a/.github/workflows/sonarqubePR.yml
+++ b/.github/workflows/sonarqubePR.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Retrieve entire repository history
         run: |
           git fetch --prune --unshallow
+      - name: install typescript dependency
+        run: |
+          npm install typescript
       - name: Run an analysis of the PR
         env:
           # to get access to secrets.SONAR_TOKEN, provide GITHUB_TOKEN
@@ -39,3 +42,4 @@ jobs:
           -Dsonar.pullrequest.base=${{ github.BASE_REF }}
           -Dsonar.pullrequest.github.repository=${{ github.repository }}
           -Dsonar.java.binaries=/tmp
+          -Dsonar.scm.revision=${{ github.event.pull_request.head.sha }}
